[package]
name = "device-id"
version = "0.2.1"
edition = "2024"
description = "用于Rust跨平台获取设备ID的库"
keywords = ["device", "id", "uuid", "android", "ios"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mzdk100/device-id.git"

[dependencies]
cache-dir = "0.1.9"
tracing ="0.1.41"

[dependencies.uuid]
features = ["v4", "serde", "fast-rng"]
version = "1.18.1"
